@@ -1,6 +1,11 @@
 1.0.2-devel
 ======================
 
+ * Fixed #5028: constraintypes.py doesn't work properly with PortalFactory when 
+   acquiring types.
+   http://trac.plone.org/plone/ticket/5028
+   [panjunyong]
+
  * fixed styles for thumbnailview.
    [spliter]
 
